# pico-tflite

./: .gitignore  README.md  setup.sh
RP2040_common/: debug_log.cc  micro_time.cc
hello_world/: CMakeLists.txt  main.cc  main_functions.cc  output_handler.cc  output_handler.h
micro_speech/: CMakeLists.txt  audio_provider_mock_test.cc  feature_provider_test.cc  main.cc  main_functions.cc  micro_speech_on_off.tflite  recognize_commands.h
micro_speech/console_app/: README.MD  console_handler.cc  console_handler.h
micro_speech/microphone/: analog_audio_provider.cc  command_responder.cc  pdm_audio_provider.cc
